# django-crispy-forms

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG  CHANGELOG.md  CONTRIBUTORS.txt  LICENSE.txt  MANIFEST.in  Makefile  README  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  ISSUE_TEMPLATE.md  SECURITY.md
.github/workflows/: black.yml  ci-testing-django-master.yml  ci-testing.yml  flake8.yml  isort.yml  main.yml  publish.yml
crispy_forms/: LICENSE  __init__.py  base.py  bootstrap.py  compatibility.py  exceptions.py  helper.py  helpers.py  layout.py  layout_slice.py  tailwind.py  utils.py
crispy_forms/static/uni_form/: default.uni-form.css  uni-form.css  uni-form.jquery.js
crispy_forms/templatetags/: crispy_forms_field.py  crispy_forms_filters.py  crispy_forms_tags.py  crispy_forms_utils.py  uni_form_tags.py
crispy_forms/tests/: __init__.py  base.py  compatibility.py  conftest.py  forms.py  runtests.py  runtests_bootstrap.py  runtests_bootstrap3.py  runtests_uniform.py  test_dynamic_api.py  test_form_helper.py  test_layout.py  test_layout_objects.py  test_settings.py  test_settings_bootstrap.py  test_settings_uniform.py  test_tags.py  test_tailwind.py  test_utils.py  tests.py  urls.py  utils.py
docs/: Makefile  api_bootstrap.rst  api_field.rst  api_filters.rst  api_helpers.rst  api_layout.rst  api_tags.rst  api_templatetags.rst  changelog.rst  concepts.rst  conf.py  contributing.rst  contributors.rst  crispy_tag_forms.rst  crispy_tag_formsets.rst  customization.rst  customization.txt  docs_todo.rst  dynamic_layouts.rst  faq.rst  filters.rst  form_helper.rst  getting_started.rst  helpers.rst  index.rst  index.txt  install.rst  install.txt  layouts.rst  make.bat  migration.rst  reference.rst  requirements.txt  settings.py  tags.rst  template_packs.rst  uni_form_tags.rst  usage.rst  usage.txt  usage_filters.rst  (+1 more)
docs/_build/doctrees/: helpers.doctree  (+6 more)
docs/_templates/: sidebarintro.html
requirements/: dev.txt  lint.txt  testing.txt  typechecking.txt
test_project/: manage.py  settings.py  urls.py
test_project/test_app/: admin.py  forms.py  models.py  urls.py  views.py
tests/: conftest.py  forms.py  test_dynamic_api.py  test_fieldsets.py  test_form_helper.py  test_layout.py  test_layout_objects.py  test_settings.py  test_tags.py  test_utils.py  utils.py
tests/results/: test_formset_layout.html  test_modelformset_layout.html  test_render_hidden_fields lt50.html  utils_test.html
tests/templates/: crispy_render_template.html  custom_field_template.html  custom_fieldset_template_with_context.html  custom_form_template.html  custom_form_template_with_context.html
uni_form/: README  __init__.py  helper.py  helpers.py  layout.py  models.py  util.py  utils.py
uni_form/media/: uni-form.css
uni_form/templates/: uni_form.html  uni_formset.html
uni_form/templatetags/: uni_form.py  uni_form_field.py  uni_form_filters.py  uni_form_tags.py
uni_form/tests/: runtests.py  test_settings.py  tests.py  urls.py
(+318 files in other folders)
