[metadata]
license_file = LICENSE.txt

[tool:pytest]
markers =
    only: Parametrized mark to limit a test to a single template pack
DJANGO_SETTINGS_MODULE= tests.test_settings

[coverage:run]
branch = True

[flake8]
exclude =
    # The conf file is auto generated, ignore it
    docs/conf.py
# mirrors max-line-length of Django. This is shorter than GitHub editor (127)
max-line-length = 119
statistics = True
max-complexity = 10
count = True
select = C,E,F,W,B
ignore = E203, W503
