[metadata]
license_file = LICENSE.txt

[tool:pytest]
DJANGO_SETTINGS_MODULE= tests.test_settings

[coverage:run]
branch = True

[flake8]
exclude =
    # The conf file is auto generated, ignore it
    docs/conf.py
# mirrors max-line-length of Django. This is shorter than GitHub editor (127)
max-line-length = 119
